fix: set z-index for proper box shadow rendering

--- a/src/extension/popup/index.css
+++ b/src/extension/popup/index.css
@@ -28,11 +28,11 @@ code {
 }
 ::-webkit-scrollbar-track {
   border-radius: 10px;
-  background: rgba(39, 39, 39, 0.1);
+  background: #141414;
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background: rgba(190, 190, 190, 0.2);
+  background: #1a1717;
 }
 ::-webkit-scrollbar-thumb:hover {
   background: rgba(58, 58, 58, 0.4);
